<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <!--Hello! You'll basically should only need to change these names and the steam path (just below)-->
    <!--The author name(s) as they appear in MTS and any other comments are in your ModTheSpire.json-->
    <groupId>mysterydungeon</groupId>
    <artifactId>MysteryDungeon</artifactId> <!--Keep a note of this one: this is the ID used in the "auto add cards" method-->
    <name>Mystery Dungeon</name>
    <version>0.2.99</version>
    <description>A mod based on Pokémon Mystery Dungeon.</description>

    <properties>
        <maven.compiler.source>1.8</maven.compiler.source>
        <maven.compiler.target>1.8</maven.compiler.target>
        <SlayTheSpire.version>12-22-2020</SlayTheSpire.version>
        <ModTheSpire.version>3.8.0</ModTheSpire.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <!--CHANGE THIS TO YOUR STEAM INSTALLATION-->
        <Steam.path>D:\BiblioSteam\steamapps</Steam.path>
    </properties>

    <dependencies>
        <dependency>
            <groupId>com.megacrit.cardcrawl</groupId>
            <artifactId>slaythespire</artifactId>
            <version>${SlayTheSpire.version}</version>
            <scope>system</scope>
            <systemPath>${Steam.path}/common/SlayTheSpire/desktop-1.0.jar</systemPath>
            <!--<systemPath>${basedir}/../lib/desktop-1.0.jar</systemPath>-->
        </dependency>
        <dependency>
            <groupId>com.evacipated.cardcrawl</groupId>
            <artifactId>modthespire</artifactId>
            <version>${ModTheSpire.version}</version>
            <scope>system</scope>
            <systemPath>${Steam.path}/workshop/content/646570/1605060445/ModTheSpire.jar</systemPath>
            <!--<systemPath>${basedir}/../lib/ModTheSpire.jar</systemPath>-->
        </dependency>
        <dependency>
            <groupId>basemod</groupId>
            <artifactId>basemod</artifactId>
            <version>5.0.0</version>
            <scope>system</scope>
            <systemPath>${Steam.path}/workshop/content/646570/1605833019/BaseMod.jar</systemPath>
            <!--<systemPath>${basedir}/../lib/BaseMod.jar</systemPath>-->
        </dependency>
        <dependency>
            <groupId>com.evacipated.cardcrawl.mod</groupId>
            <artifactId>StSLib</artifactId>
            <version>1.3.2</version>
            <scope>system</scope>
            <systemPath>${Steam.path}/workshop/content/646570/1609158507/StSLib.jar</systemPath>
            <!--<systemPath>${basedir}/../lib/StSLib.jar</systemPath>-->
        </dependency>
    </dependencies>


    <!-- This is how your code is packaged into the jar file-->
    <build>
        <finalName>${project.artifactId}</finalName>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <version>2.4</version>
                <configuration>
                    <excludes>
                        <exclude>**/*.psd</exclude>
                    </excludes>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-antrun-plugin</artifactId>
                <version>1.8</version>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <configuration>
                            <target>
                                <!-- This moves your mod into a common folder where all mods you make can go. -->
                                <copy file="target/${project.artifactId}.jar" tofile="${Steam.path}/common/SlayTheSpire/mods/${project.artifactId}.jar"/>
                            </target>
                        </configuration>
                        <goals>
                            <goal>run</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>

        <resources>
            <resource>
                <directory>src/main/resources</directory>
            </resource>
            <resource>
                <directory>src/main/resources</directory>
                <filtering>false</filtering>
                <excludes>
                    <exclude>ModTheSpire.json</exclude>
                </excludes>
            </resource>
            <resource>
                <directory>src/main/resources</directory>
                <filtering>true</filtering>
                <includes>
                    <include>ModTheSpire.json</include>
                </includes>
            </resource>
        </resources>
    </build>
</project>
